# Veil-Browser

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  changelog.md  main.py  pyproject.toml  requirements.txt
browser/: adblock.py  data.py  default_config.json  history.py  qt.py  tabs.py  utils.py  window.py
