[project]
name = "veil-browser"
version = "2.0.0"
description = "Privacy-first web browser designed to eliminate tracking, data collection, and intrusive analytics"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "adblock>=0.6.0",
    "psutil>=7.1.3",
    "pyperclip>=1.11.0",
    "url-normalize>=2.2.1",
]

[project.optional-dependencies]
pyqt = [
    "PyQt6>=6.10.0",
    "PyQt6-WebEngine>=6.10.0",
]

[tool.basedpyright]
typeCheckingMode = "standard"
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
